CP30-81 - Preventing homepage build movement on mobile (fades still work)

--- a/gatsby/src/modules/home-header/main.scss
+++ b/gatsby/src/modules/home-header/main.scss
@@ -40,6 +40,7 @@
     opacity: 0;
     transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
   }
+  
 
   h1 span {
     opacity: 0;
@@ -75,6 +76,12 @@
       }
       h1 span {
         opacity: 1;
+      }
+    }
+
+    @include media-breakpoint-down(sm) {
+      h1, p, .cta {
+        transform: translate3d(0, 0, 0) !important;
       }
     }
   }
